[refs #99877] Files upload: fix input elements spacing.

--- a/land/copernicus/content/browser/static/fileslibraryitem/app/src/less/filesupload.less
+++ b/land/copernicus/content/browser/static/fileslibraryitem/app/src/less/filesupload.less
@@ -1,4 +1,8 @@
 div.files-upload-container {
   text-align: center;
   padding: 20px;
+
+  input {
+    display: initial;
+  }
 }
